--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -24,7 +24,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/share/i3blocks/$BLOCK_NAME
+command=/home/djuelg/.config/i3blocks/$BLOCK_NAME/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -34,13 +34,34 @@ markup=none
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-command=/usr/share/i3blocks/volume 5 pulse
-label=VOL
+command=/home/djuelg/.config/i3blocks/volume/volume 5 pulse
+label=
 #label=
 instance=Master
 #instance=PCM
 interval=3
 signal=10
+
+[temperature]
+label= 
+interval=10
+
+[monitor_manager]
+interval=once
+#SHOW_ON_OFF=1
+#SHOW_NAMES=1
+#SHOW_PRIMARY=1
+#SHOW_MODE=1
+#SHOW_BLANKED=1
+#SHOW_DUPLICATE=1
+#SHOW_ROTATION=1
+#SHOW_REFLECTION=1
+#SHOW_BRIGHTNESS=1
+#SHOW_BRIGHTNESS_VALUE=0
+#SHOW_UP_DOWN=1
+#FONT_FAMILY=DejaVu Sans Mono
+#FONT_SIZE=11
+#CLOSE_TO_BOUNDARY_BUFFER=20
 
 # Memory usage
 #
@@ -101,18 +122,18 @@ interval=10
 
 # Battery indicator
 #
-# The battery instance defaults to 0.
-[battery]
-#label=BAT
-label=
-#instance=1
+[battery2]
+markup=pango
 interval=30
 
 # Date Time
-#
-[time]
-command=date '+%d.%m.%Y %H:%M:%S'
+[calendar]
 interval=1
+LABEL= 
+DATEFMT=+%H:%M:%S
+# SHORTFMT=+%H:%M:%S
+HEIGHT=180
+WIDTH=220
 
 # Generic media player support
 #
@@ -122,7 +143,6 @@ interval=1
 instance=spotify
 interval=5
 signal=10
-
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
