added date to time block

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -130,7 +130,7 @@ interval=30
 [calendar]
 interval=1
 LABEL= 
-DATEFMT=+%H:%M:%S
+DATEFMT=+%d.%m.%Y %H:%M:%S
 # SHORTFMT=+%H:%M:%S
 HEIGHT=180
 WIDTH=220
