--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -28,6 +28,16 @@ command=/home/djuelg/.config/i3blocks/$BLOCK_NAME/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+[mediaplayer]
+instance=spotify
+interval=5
+signal=10
+separator=false
+
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
@@ -35,19 +45,16 @@ markup=none
 # See the script for details.
 [volume]
 command=/home/djuelg/.config/i3blocks/volume/volume 5 pulse
-label=
+label= 
 #label=
 instance=Master
 #instance=PCM
 interval=3
 signal=10
 
-[temperature]
-label= 
-interval=10
-
 [monitor_manager]
 interval=once
+separator=false
 #SHOW_ON_OFF=1
 #SHOW_NAMES=1
 #SHOW_PRIMARY=1
@@ -87,21 +94,6 @@ interval=once
 # #instance=/mnt/data
 # interval=30
 
-# Network interface monitoring
-#
-# If the instance is not specified, use the interface used for default route.
-# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-#instance=wlan0
-#color=#00FF00
-interval=10
-separator=false
-
-[wifi]
-#instance=wlp3s0
-interval=10
-separator=false
-
 # [bandwidth]
 # #instance=eth0
 # interval=5
@@ -116,9 +108,29 @@ separator=false
 # min_width= 100.00
 # separator=false
 
-[load_average]
-label=
+[temperature]
+label= 
 interval=10
+separator=false
+
+[load_average]
+label= 
+interval=10
+
+# Network interface monitoring
+#
+# If the instance is not specified, use the interface used for default route.
+# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
+[iface]
+#instance=wlan0
+#color=#00FF00
+interval=10
+separator=false
+
+[wifi]
+#instance=wlp3s0
+interval=10
+separator=false
 
 # Battery indicator
 #
@@ -135,14 +147,6 @@ DATEFMT=+%d.%m.%Y %H:%M:%S
 HEIGHT=180
 WIDTH=220
 
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
-instance=spotify
-interval=5
-signal=10
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
